flag-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service-deployment
  namespace: flag-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      containers:
        - name: flag-service
          image: flag-service:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi" 
              cpu: "250m"   
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8002
          startupProbe:
            httpGet: { path: /health, port: 8002 }
            periodSeconds: 5
            failureThreshold: 6
