flag-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: flag-service
spec:
  selector:
    app: flag-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
