flag-service/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-service-ingress
  namespace: flag-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx # Indica que o AWS Load Balancer Controller deve gerenciar isso
  rules:
    - http:
        paths:
          - path: /flag-service/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flag-service # Nome do Service criado acima
                port:
                  number: 80
